compare-timetables: fix z-index

--- a/static/css/timetable/partials/compare_timetable_sidebar.scss
+++ b/static/css/timetable/partials/compare_timetable_sidebar.scss
@@ -46,6 +46,7 @@
   left: 50%;
   margin-left: -5px;
   top: 70px;
+  z-index: -1;
 }
 
 .compare-timetable-exit {
